log
Tue, May 13, 2025 12:34:11 PM: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
Tue, May 13, 2025 12:38:42 PM: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|4
total_score: 15/70
bab6cd7
Tue, May 13, 2025 12:49:09 PM: 
 sudoku.c | 36 +++++++++++++++++++++++++++++++++++-
 1 file changed, 35 insertions(+), 1 deletion(-)
 tests:  4|4
total_score: 25/70
54cacf9
Tue, May 13, 2025 12:51:16 PM: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  4|4
total_score: 25/70
79e6d74
Tue, May 13, 2025 12:57:11 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
78e8a82
Tue, May 13, 2025  1:04:30 PM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|2
total_score: 45/70
4ab7b72
Tue, May 13, 2025  1:17:13 PM: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
18a20d5
Wed, May 14, 2025 11:31:49 PM: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'DFS':
sudoku.c:123:14: error: implicit declaration of function 'createSactk'; did you mean 'createStack'? [-Werror=implicit-function-declaration]
  123 |   Stack* S = createSactk();
      |              ^~~~~~~~~~~
      |              createStack
sudoku.c:123:14: error: initialization of 'Stack *' {aka 'List *'} from 'int' makes pointer from integer without a cast [-Werror=int-conversion]
sudoku.c:125:10: error: implicit declaration of function 'isEmpty'; did you mean 'is_empty'? [-Werror=implicit-function-declaration]
  125 |   while(!isEmpty(S)){
      |          ^~~~~~~
      |          is_empty
sudoku.c:130:7: error: implicit declaration of function 'freeStack'; did you mean 'createStack'? [-Werror=implicit-function-declaration]
  130 |       freeStack(S);
      |       ^~~~~~~~~
      |       createStack
sudoku.c:140:5: error: implicit declaration of function 'freeList'; did you mean 'createList'? [-Werror=implicit-function-declaration]
  140 |     freeList(adj);
      |     ^~~~~~~~
      |     createList
cc1.exe: all warnings being treated as errors
52acf95
Wed, May 14, 2025 11:34:14 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'DFS':
sudoku.c:130:7: error: implicit declaration of function 'freeStack'; did you mean 'createStack'? [-Werror=implicit-function-declaration]
  130 |       freeStack(S);
      |       ^~~~~~~~~
      |       createStack
sudoku.c:140:5: error: implicit declaration of function 'freeList'; did you mean 'createList'? [-Werror=implicit-function-declaration]
  140 |     freeList(adj);
      |     ^~~~~~~~
      |     createList
cc1.exe: all warnings being treated as errors
f15e3a8
Wed, May 14, 2025 11:36:09 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'DFS':
sudoku.c:130:7: error: implicit declaration of function 'cleanList'; did you mean 'createList'? [-Werror=implicit-function-declaration]
  130 |       cleanList(S);
      |       ^~~~~~~~~
      |       createList
cc1.exe: all warnings being treated as errors
5244293
